# coperto

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
examples/: main.py
examples/datasets/: klein.py  klein_400.txt  klein_900.txt  pbmc3k.py  pbmc3k_pca50.txt
examples/results/: main_benchmark.csv
python/coperto/: __init__.py
src/: bitvec.rs  cliques.rs  cone.rs  distance_matrix.rs  lib.rs  preprocess.rs
src/linkage/: complete.rs  conservative.rs  mod.rs
