[project]
name = "coperto"
version = "0.1.7"
requires-python = ">=3.10"
authors = [
  { name="António Leitão", email="antonio.lagedesousaleitao@sns.it" },
]
description = "Filtration of quotient Vietoris Rips fast and exact."
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
license = {text = "MIT"}
[project.urls]
homepage = "https://github.com/antonio-leitao/coperto"
repository = "https://github.com/antonio-leitao/coperto"

[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project.optional-dependencies]
dev = ["maturin"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "coperto._core"

[dependency-groups]
dev = [
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "ripser>=0.6.14",
]
